--- a/fiverr/bio-button-click/Lifefram/Lifefram.html
+++ b/fiverr/bio-button-click/Lifefram/Lifefram.html
@@ -719,7 +719,7 @@
 
         .acadp .pull-left {
             float: right !important;
-            width: 100%;
+            /* width: 100%; */
             text-align: right;
             padding-right: 40px;
             line-height: 45px;
